# practice

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
python/course-schedule/: README.md  course_schedule.py  example_input.txt  test_course_schedule.py
python/pacific-atlantic-water-flow/: README.md  water_flow.py
python/sum-of-two-integers/: README.md  sum_of_two_integers.py  test_sum_of_two_integers.py
python/unique-paths/: test_unique_paths.py
requirements/: dev.in  dev.txt  tests.txt
src/binary/sum-of-two-integers/: sum_of_two_integers.py  test_sum_of_two_integers.py
src/dynamic-programming/unique-paths/: README.md  unique_paths.py
src/graph/course-schedule/: README.md  course_schedule.py
src/python_practice/design/csv_api/: README.md  csv_api.py  test_csv_api.py
src/python_practice/design/csv_api/testdata/: escaped_csv.txt  simple_csv.txt
src/python_practice/design/parking_lot/: README.md  billing.py  class_diagram.drawio  config.json  events.py  factory.py  parking_assignment.py  parking_floor.py  parking_lot.py  parking_spot.py  terminals.py  ticket.py
src/python_practice/graph/course-schedule/: example_input.txt  test_course_schedule.py
src/python_practice/graph/pacific-atlantic-water-flow/: test_water_flow.py  water_flow.py
src/python_practice/matrix/: README.md  test_update_state.py  update_state.py
src/python_practice/string/compound_words/: README.md  compound_words.py  test_compound_words.py
src/python_practice/tree/check_graph_bfstree/: README.md  check_bfstree.py  test_check_bfstree.py
