[metadata]
# replace with your username:
name = leetcode-problems
version = 0.0.2
author = Rehmani, Shamsuddin
author_email = shamsuddin.rehmani@gmail.com
description = leetcode problems solutions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rehmanis/leetcode
project_urls =
    Bug Tracker = https://github.com/rehmanis/leetcode/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
