[metadata]
# replace with your username:
name = practice
version = 0.0.4
author = Rehmani, Shamsuddin
author_email = shamsuddin.rehmani@gmail.com
description = technical D&A problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rehmanis/practice
project_urls =
    Bug Tracker = https://github.com/rehmanis/practice/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.9


[options.packages.find]
where = src

[coverage:run]
branch = True
source =
    python_practice

[coverage:paths]
source =
    src
    */site-packages

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
